--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
         <span>by</span>
         <a id="logo" href="http://www.kongkongye.com" target="_blank">kongkongye</a>
     </div>
+
+    <script src="spec-cn.js"></script>
+    <script src="menu.js"></script>
 </body>
 </html>
