--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a id="logo" href="http://www.kongkongye.com" target="_blank">kongkongye</a>
     </div>
 
-    <script src="spec-cn.js"></script>
-    <script src="menu.js"></script>
+    <script src="spec-cn.min.js"></script>
+    <script src="menu.min.js"></script>
 </body>
 </html>
